GNOME Bugzilla – Bug 719986
Labels on connection details are not linked to values
Last modified: 2013-12-09 12:48:59 UTC
Created attachment 263681 [details] [review] Proposed patch This stops automated tests from verifying connection details
Review of attachment 263681 [details] [review]: Looks good to me
https://git.gnome.org/browse/gnome-control-center/commit/?id=b5d03b42a043ab81c46b0f22fe14fa51893e86bf