networking: set mnemonic widget for labels and values in connection details

https://bugzilla.gnome.org/show_bug.cgi?id=719986