panels/network/net-device-simple.c
@@ -296,6 +296,7 @@ net_device_simple_add_row (NetDeviceSimple *device_simple,
         value = gtk_label_new (NULL);
         gtk_misc_set_alignment (GTK_MISC (value), 0.0, 0.5);
         g_object_bind_property (device_simple, property_name, value, "label", 0);
+        gtk_label_set_mnemonic_widget(label, value);
         gtk_grid_attach (grid, value, 1, top_attach, 1, 1);
         gtk_widget_show (value);
 }
